# distributed-kv-cache

./: .gitignore  README.md  docker-compose.yml
.devcontainer/: Dockerfile  README.md  devcontainer.json  post-create.sh
docs/: DIAGRAMS.md
infra/: .gitignore  DEPLOYMENT.md  main.tf  outputs.tf  terraform.tfvars.example  variables.tf
k8s/: coordinator.yaml  gateway.yaml  namespace.yaml  worker.yaml
scripts/: build_images.sh  deploy_gke.sh  gke_helper.sh  local_dev.sh  quickstart_gke.sh
services/coordinator/: Dockerfile  pyproject.toml
services/coordinator/app/: hash_ring.py  main.py
services/gateway/: Dockerfile  pyproject.toml
services/gateway/app/: main.py
services/worker/: Dockerfile  pyproject.toml
services/worker/app/: kv_cache.py  lru_cache.py  main.py  model_loader.py  tensor_utils.py
tests/: README.md  pyproject.toml  tensor_utils.py  test_cache_locality.py  test_cache_performance.py  test_generation_flow.py  test_kv_cache.py  test_routing_distribution.py  test_stress.py  test_utils.py
tests/archived/: test_kv_cache.py  test_kv_cache_advanced.py  test_stress.py
