[project]
name = "worker"
version = "0.1.0"
description = "Worker node that stores local KV pairs"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "fastapi[standard]>=0.121.2",
    "uvicorn[standard]>=0.38.0",
    "torch>=2.5.1",
    "numpy>=2.3.5",
    "transformers>=4.57.3",
]
